# final_project_group_3

./: .env  .gitignore  .user.yml  profiles.yml  pyproject.toml  requirements.txt
dags/: dbt_data_ingest_dag.py  only_data_modeling_dag.py  only_etl_dag.py
data/: customer_9.csv
dbt/airflowdbt/: dbt_project.yml  package-lock.yml  packages.yml
dbt/airflowdbt/models/dimensionals/: dim_coupons.sql  dim_coupons.yml  dim_customers.sql  dim_customers.yml  dim_date.sql  dim_date.yml  dim_date_fiscal.sql  dim_products.sql  dim_products.yml
dbt/airflowdbt/models/facts/: fct_login_attemps.sql  fct_login_attemps.yml  fct_order_products.sql  fct_orders.sql  (+4 more)
docker/: Dockerfile.airflow  docker-compose.yml
plugins/operators/: clean_dataframe_operators.py  fetch_local_data_operators.py  insert_database_operators.py
scripts/: airflow_entrypoint.sh  goodnight.sh  metabase_entrypoint.sh
sql/: init.sql
sql/create/: create_dim_coupons.sql  create_dim_date.sql  create_dim_schemas.sql  create_presentation_daily_order_per_product.sql  create_presentation_daily_order_revenue.sql  create_presentation_daily_order_revenue_per_categories.sql  create_presentation_daily_order_revenue_per_suppliers.sql
sql/upsert/: upsert_dim_coupons.sql  upsert_dim_customers.sql  upsert_dim_date.sql  upsert_dim_login_attemps.sql  upsert_dim_orders.sql  upsert_dim_product_categories.sql  upsert_dim_products.sql  upsert_dim_suppliers.sql  upsert_fact_product_category_performance.sql  upsert_fact_product_performance.sql  upsert_fact_sales_orders.sql
utils/: arguments.py  constants.py  converters.py
(+53 files in other folders)
